# shogun_search

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/analyzer/: analyzer.rs  char_filter.rs  error.rs  token_filter.rs
src/query/: error.rs  mod.rs  query.rs  score.rs
src/service/: build.rs
src/store/: builder.rs  constants.rs  document.rs  error.rs  mod.rs  posting.rs  term.rs
